# cityjson2ifc

./: .gitignore  CHANGELOG  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/workflows/: package-release.yml  package.yml
cityjson2ifc/: cli.py  convert.py
docs/: generate_conversion_table.py
src/cityjson2ifc_cli/: __init__.py  cli.py  convert.py
tests/: conftest.py  test_cli.py  test_convert.py
tests/data/: 3dbag_v210908_fd2cee53_5907_subset.json
tests/data/features/: 0603100000022226.city.jsonl  metadata.city.json
tests/data/tmp/: README.md
