[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cityjson2ifc_cli"
version = "1.0"
description = "Convert CityJSON files to IFC format"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0 License" }
authors = [
    { name = "3DGI", email = "info@3dgi.nl" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: Apache Software License"
]
urls = { github = "https://github.com/3DGI/cityjson2jsonfg" }
dependencies = [
    "click >= 8.1",
    "ifccityjson @ git+https://github.com/3DGI/IfcOpenShell.git@build-package#subdirectory=src/ifccityjson"
]
optional-dependencies = { develop = ["pytest", "tox", "briefcase"] }
scripts = { cityjson2ifc = "cityjson2ifc_cli.cli:main_cmd" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.briefcase]
project_name = "cityjson2ifc"
bundle = "com.example"
version = "0.1"

[tool.briefcase.app.cityjson2ifc_cli]
formal_name = "cityjson2ifc"
description = "Convert CityJSON files to IFC"
long_description = "Convert CityJSON files to IFC format"
sources = ['src/cityjson2ifc_cli']