[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cityjson2ifc_cli"
version = "1.0-alpha"
description = "Convert CityJSON files to IFC format"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Lesser General Public License v3 or later" }
authors = [
    { name = "3DGI", email = "info@3dgi.nl" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)"
]
dependencies = [
    "click >= 8.1",
    "ifccityjson @ git+https://github.com/IfcOpenShell/IfcOpenShell.git@80846061f2c1a9fda462455c5f7323da2287e395#subdirectory=src/ifccityjson"
]
optional-dependencies = { develop = ["pytest", "tox"] }
scripts = { cityjson2ifc = "cityjson2ifc_cli.cli:cli" }

[project.urls]
"Homepage" = "https://github.com/3DGI/cityjson2ifc"
"Bug Tracker" = "https://github.com/3DGI/cityjson2ifc/issues"


[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
